<resources>
    <string name="app_name">SeaBuck Cafe</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="cafe_title">SeaBuck Cafe</string>
    <string name="action_sign_up">Don\'t have an account? Sign up!</string>
    <string name="login_button">Login</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="reset_email">Reset Email</string>
    <string name="send">Send</string>

    <!--Strings related to register-->
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="inValid_email">Invalid Email! Please enter valid email!</string>
    <string name="empty_blank">The field should not be empty!</string>
    <string name="minimum_six_length">Password at least 6 characters</string>

    <!--Strings related to home menu-->
    <string name="typeOfFood">WHAT TYPE OF FOOD YOU CHOOSE?</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="report">Report</string>
    <string name="logout">Logout</string>

    <!--Strings related to user menu-->
    <string name="magnify">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="about_us">About Us</string>
    <string name="add_cart">Add Cart</string>

    <!--Strings related to image view description-->
    <string name="account_logo">Edit account logo</string>
    <string name="map_marker_logo">Map marker logo</string>
    <string name="phone_logo">phone logo</string>

    <!--Strings related to user profile-->
    <string name="edit">Edit</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="background_picture">Background Picture</string>
    <string name="account">Account</string>
    <string name="address">Address</string>
    <string name="current_address">Current Address</string>
    <string name="contact_us">Contact Us</string>
    <string name="forward_edit_full_name">Edit full name</string>
    <string name="forward_edit_password">Edit password</string>
    <string name="forward_edit_phone_number">Edit phone number</string>
    <string name="forward_edit_address">Edit address</string>
    <string name="save">Save</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="add_new">Add New</string>
    <string name="new_address">New Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="address_in_adapter">Address: %s</string>
    <string name="your_fullName">Your Full Name</string>
    <string name="your_password">Your Password</string>
    <string name="your_phone_number">Your Phone Number</string>

    <!--Strings related to AppBar with Navigation Drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="your_address">Location Address</string>

    <!--Strings related to admin menu-->
    <string name="upload_image">Upload Image</string>
    <string name="upload_gallery">Upload Gallery</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="image_selector">Select Image Action</string>
    <string name="food_title">Title</string>
    <string name="food_type">Type</string>
    <string name="food_price">Price</string>
    <string name="food_description">Food Description</string>
    <string name="select_food_type">Select Food Type</string>
    <string name="available">Available</string>
    <string name="rm">RM%1$.2f</string>

    <string name="foodType1">breakfast</string>
    <string name="foodType2">lunch</string>
    <string name="foodType3">dinner</string>
    <string name="foodType4">dessert</string>
    <string name="foodType5">drink</string>
    <string name="foodType6">others</string>
    <string name="food_image">food image</string>

    <!--Strings related to user menu-->
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="drinks">Drinks</string>
    <string name="side_dishes">Side Dishes</string>
    <string name="dessert">Dessert</string>
    <string name="others">Others</string>
    <string name="subtotal">SubTotal</string>
    <string name="continueBtn">Continue</string>

    <!--Strings related to user payment-->
    <string name="change">Change</string>
    <string name="self_pickup_delivery">Self pickup / Delivery</string>
    <string name="self_pickup">Self-Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="card_number">Card Number</string>
    <string name="your_card_number">Your Card Number</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="cvc">CVC</string>
    <string name="select_address">Select Address</string>

    <!--Strings related to user order details-->
    <string name="your_order">Your Order Information</string>
    <string name="cancel_reason">Cancel Reason</string>
    <string name="payment_type">Payment: %s</string>
    <string name="pickup_type">Pickup: %s</string>
    <string name="order_address">Address: %s</string>
    <string name="phone_number_order">Phone Number: %s</string>
    <string name="total_price">Total Price: %1$s</string>

    <!--Strings related to admin order list and details-->
    <string name="food">Food</string>
    <string name="food_order">Food Order</string>
    <string name="order_name">Name: %s</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="price_per_quantity">Unit Price</string>
    <string name="pending">PENDING</string>
    <string name="on_prepare">ON PREPARE</string>
    <string name="complete">Complete</string>
    <string name="pending_order">Pending Order</string>
    <string name="prepare_order">On Prepare Order</string>
    <string name="on_deliver_order">On Deliver Order</string>
    <string name="your_cancel_reason">Your Cancel Reason</string>
    <string name="notification_title">You has a new order</string>
    <string name="notification_message">Please accept as fast as possible</string>

    <!--Strings related to admin report calendar-->
    <string name="date_picker">Date Picker</string>
    <string name="month_picker">Month Picker</string>
    <string name="all">All</string>
    <string name="loading">Loading...</string>


</resources>