<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


<group android:id="@+id/info">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />

        <item
            android:id="@+id/order"
            android:icon="@drawable/ic_script_outline"
            android:title="@string/order" />

        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_information_outline"
            android:title="@string/about_us" />
    </group>

    <group android:id="@+id/group_divider">

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_user"
            android:title="@string/logout" />
    </group>
</menu>