<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/imageSelectorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image_selector"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toTopOf="@id/dialog_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/cameraImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_camera"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/upload_image"
            app:layout_constraintTop_toBottomOf="@id/imageSelectorTitle"
            app:layout_constraintEnd_toStartOf="@id/galleryImage"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/galleryImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_gallery"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/upload_image"
            app:layout_constraintTop_toBottomOf="@id/imageSelectorTitle"
            app:layout_constraintStart_toEndOf="@id/cameraImage"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:layout_marginVertical="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/cameraImage"
            app:layout_constraintEnd_toEndOf="@id/cameraImage"
            app:layout_constraintStart_toStartOf="@id/cameraImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:layout_marginVertical="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintTop_toBottomOf="@id/galleryImage"
            app:layout_constraintEnd_toEndOf="@id/galleryImage"
            app:layout_constraintStart_toStartOf="@id/galleryImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>