<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.seabuckcafe.models.MenuSharedViewModel" />

        <variable
            name="adminFoodDetailFragment"
            type="com.example.seabuckcafe.ui.admin.AdminFoodDetailFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.user.FoodDetailFragment">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/topAppBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_arrow_back" />

            </com.google.android.material.appbar.AppBarLayout>

            <ImageView
                android:id="@+id/foodImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/imageBackground"
                android:contentDescription="@string/upload_image"
                android:elevation="8dp"
                android:src="@{viewModel.image}"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topAppBarLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foodTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="16dp"
                android:elevation="4dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/foodImage">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/foodTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/food_title"
                    android:text="@{viewModel.title.toString()}"
                    android:inputType="text|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foodType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/foodTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/foodTypeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/food_type"
                    android:text="@{viewModel.type.toString()}"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="text|textNoSuggestions"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foodPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/foodType">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/foodPriceText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/food_price"
                    android:text="@{viewModel.price.toString()}"
                    android:inputType="numberDecimal|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/foodDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideOverlay"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/foodPrice">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/foodDescriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="4"
                    android:gravity="start"
                    android:scrollbars="vertical"
                    android:overScrollMode="ifContentScrolls"
                    android:scrollbarStyle="insideInset"
                    android:hint="@string/food_description"
                    android:text="@{viewModel.description.toString()}"
                    android:inputType="textMultiLine|textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/available"
                android:textSize="18sp"
                android:checked="@{viewModel.available}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/foodDescription" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addFoodItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
                android:elevation="8dp"
                android:layout_marginTop="16dp"
                android:padding="16dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switches" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>